Setup spawn point, adjust camera.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "start": "node ./scripts/server.js",
         "build": "browserify main.js --outfile bundled.js",
-        "watch": "watchify ./main.js -o ./bundled.js -v",
+        "watch": "watchify main.js --outfile bundled.js",
         "deploy": "node ./scripts/deploy.js"
     },
     "dependencies": {
